Add FOSDEM 2025/2026 insights extraction
Extract actionable content from 68 FOSDEM talk transcripts:
- eBPF: bpftrace, sched_ext, netkit, Aya, XDP patterns
- Profiling: JFR+eBPF, PGO, Firefox Profiler, perf counters
- Kernel: DAMON, PREEMPT_RT, librseq, livepatching
- Network: gRPC optimization, VPP TLS, HTTP/3 telemetry
- Containers: CRIU, Quadlet, bootc, Spegel P2P
- JVM: jlink, Panama FFM, GC-friendly patterns
- GPU/HPC: new guide with DCGM, MIG, LTTng tracing